Updated head and fixed about page on mobile

--- a/_stylus/layout/base-layout.styl
+++ b/_stylus/layout/base-layout.styl
@@ -2,7 +2,7 @@
     
 .container
     w(1600px)
-    padding 0 3%
+    padding 0 5%
     overflow hidden
 
 .content
