--- a/_stylus/layout/footer.styl
+++ b/_stylus/layout/footer.styl
@@ -20,7 +20,7 @@ footer
         li,a
             display inline-block
         li
-            margin-left 10px
+            margin 0 5px
             
         a
             padding 10px
