--- a/_stylus/layout/nav.styl
+++ b/_stylus/layout/nav.styl
@@ -51,8 +51,9 @@ nav.main
         top 0
         width 100%
         right 0
-        padding 50px 3% 10px
+        padding 50px 5% 10px
         box-shadow: 0px 2px 5px 0px rgba(0,166,204,0.20);
+        background-color rgba(255,255,255,0.96)
         
         .git
             display block
@@ -67,6 +68,7 @@ nav.main
             bottom 0
             overflow auto
             padding-left 10%
+            background-color #fff
             
             .page-links
                 font-size 18px
@@ -82,8 +84,9 @@ nav.main
     z-index: 10000
     user-select none
     position absolute
-    right 3%
+    right 5%
     top 50px
+    padding 5px 7px
     &:focus
         outline none
     +above(1100px)
