--- a/_stylus/layout/page.styl
+++ b/_stylus/layout/page.styl
@@ -75,12 +75,15 @@
         &__wrap
             display flex
             align-items flex-end
+            flex-wrap wrap
         .profile
             width 200px
             height 260px
             border-radius 4px
+            flex-shrink 0
         .info
             margin-left 30px
+            margin-top 30px
             span
                 display block
                 margin-top 5px
